--- a/dbai.html
+++ b/dbai.html
@@ -3,78 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>AI 对话网站</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-        #chat-container { width: 500px; margin: 50px auto; border: 1px solid #ccc; padding: 20px; height: 600px; overflow-y: scroll; }
-        .message { margin: 10px 0; }
-        .user { text-align: right; }
-        .ai { text-align: left; }
-        .message p { display: inline-block; padding: 10px; border-radius: 5px; }
-        .user p { background-color: #d1e7dd; }
-        .ai p { background-color: #f8d7da; }
-        #input-container { width: 500px; margin: 20px auto; display: flex; }
-        #user-input { flex: 1; padding: 10px; }
-        #send-button { padding: 10px; }
-    </style>
+  <iframe src="https://www.ChatStream.org/embed" width="100%" height="600px" frameborder="0"></iframe>
 </head>
-<body>
-    <div id="chat-container">
-        <!-- 聊天消息将显示在这里 -->
-    </div>
-    <div id="input-container">
-        <input type="text" id="user-input" placeholder="请输入消息...">
-        <button id="send-button">发送</button>
-    </div>
-
-    <script>
-        const chatContainer = document.getElementById('chat-container');
-        const userInput = document.getElementById('user-input');
-        const sendButton = document.getElementById('send-button');
-
-        const chat = {
-            messages: []
-        };
-
-        sendButton.addEventListener('click', sendMessage);
-        userInput.addEventListener('keyup', function(event) {
-            if (event.key === 'Enter') {
-                sendMessage();
-            }
-        });
-
-        async function sendMessage() {
-            const userMessage = userInput.value.trim();
-            if (userMessage === '') return;
-
-            // 显示用户消息
-            displayMessage('user', userMessage);
-            chat.messages.push({ role: 'user', content: userMessage });
-            userInput.value = '';
-
-            // 发送请求到后端
-            const response = await fetch('https://copilot-new.nb-group8302.workers.dev/', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ messages: chat.messages })
-            });
-
-            const data = await response.json();
-            const aiResponse = data[0].response.output.content;
-
-            // 显示AI回复
-            displayMessage('ai', aiResponse);
-            chat.messages.push({ role: 'ai', content: aiResponse });
-        }
-
-        function displayMessage(role, content) {
-            const messageElement = document.createElement('div');
-            messageElement.classList.add('message', role);
-            messageElement.innerHTML = `<p>${content}</p>`;
-            chatContainer.appendChild(messageElement);
-            chatContainer.scrollTop = chatContainer.scrollHeight;
-        }
-    </script>
-</body>
 </html>
