--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ background-color:black;
 <CENTER><div><a href="https://kjmjh.github.io/MJH/3dmf.html">魔方游戏</a></div></CENTER>
 <CENTER><div><a href="https://kjmjh.github.io/pl.html">评论</a></div></CENTER>
 <CENTER><div><a href="https://kjmjh.github.io/js.html">??!!</a></div></CENTER>
+<CENTER><div><a href="https://kjmjh.github.io/dbai.html.html">盗版AI</a></div></CENTER>
 <p style="text-align:center;font-size:7vh">我是不是该把这个破玩意儿改一下了？</p>
 <div style="color:black" class="vc">--.../...../-----/---../----./-..../-..../----./---..</div>
 </body>
