更新 indexmd,邮箱写错了

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <body>
     <div class="loader"></div>
     <div class="container">
-        <p style="font-size: 7vh; margin-bottom: 30px;">幸会👋<br/>欢迎来到这个糟糕的主页<br/>这个主页由kj23一人制作<br/>邮箱: <a href="mailto:kj23qaq@outlook.com" style="color: white; text-decoration: underline;">kj23qaq@outlook.com</a></p>
+        <p style="font-size: 7vh; margin-bottom: 30px;">幸会👋<br/>欢迎来到这个糟糕的主页<br/>这个主页由kj23一人制作<br/>邮箱: <a href="mailto:kj23awa@outlook.com" style="color: white; text-decoration: underline;">kj23qaq@outlook.com</a></p>
         <div class="link-container">
             <a href="https://kjmjh.github.io/dbai.html">盗版AI</a>
             <a href="https://kjmjh.github.io/kj">KJ23</a>
