--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@ a span:nth-child(4){
         <span></span>
         ai对话
     </a>
+    <a href="https://kjmjh.github.io/dbai2.html">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        ai对话2
+    </a>
     <a href="https://kjmjh.github.io">
         <span></span>
         <span></span>
