--- a/index.html
+++ b/index.html
@@ -150,6 +150,14 @@ a span:nth-child(4){
         <span></span>
         ai对话3
     </a>
+    </br>
+    <a href="https://kjmjh.github.io/aihh.html">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        ai绘画
+    </a>
     <a href="https://kjmjh.github.io">
         <span></span>
         <span></span>
