--- a/index.html
+++ b/index.html
@@ -2,59 +2,74 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kj-mjh</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     background: #050801;
     font-family: 'Raleway', sans-serif;
     font-weight: bold;
+    padding: 20px;
 }
+
+.button-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+}
+
 a{
     position: relative;
     display: inline-block;
     padding: 25px 30px;
-    margin: 40px 0;
     color: #03e9f4;
     text-decoration: none;
     text-transform: uppercase;
     transition: 0.5s;
     letter-spacing: 4px;
     overflow: hidden;
-    margin-right: 50px;
-   
 }
-a:hover{
+
+a:hover, a:focus {
     background: #03e9f4;
     color: #050801;
     box-shadow: 0 0 5px #03e9f4,
                 0 0 25px #03e9f4,
                 0 0 50px #03e9f4,
                 0 0 200px #03e9f4;
-     -webkit-box-reflect:below 1px linear-gradient(transparent, #0005);
+    -webkit-box-reflect:below 1px linear-gradient(transparent, #0005);
+    outline: none;
 }
-a:nth-child(1){
+
+a:nth-child(3n+1){
     filter: hue-rotate(270deg);
 }
-a:nth-child(2){
+a:nth-child(3n+2){
     filter: hue-rotate(110deg);
 }
+
 a span{
     position: absolute;
     display: block;
 }
+
 a span:nth-child(1){
     top: 0;
-    left: 0;
+    left: -100%;
     width: 100%;
     height: 2px;
     background: linear-gradient(90deg,transparent,#03e9f4);
@@ -68,6 +83,7 @@ a span:nth-child(1){
         left: 100%;
     }
 }
+
 a span:nth-child(2){
     top: -100%;
     right: 0;
@@ -85,9 +101,10 @@ a span:nth-child(2){
         top: 100%;
     }
 }
+
 a span:nth-child(3){
     bottom: 0;
-    right: 0;
+    right: -100%;
     width: 100%;
     height: 2px;
     background: linear-gradient(270deg,transparent,#03e9f4);
@@ -102,7 +119,6 @@ a span:nth-child(3){
         right: 100%;
     }
 }
-
 
 a span:nth-child(4){
     bottom: -100%;
@@ -122,54 +138,58 @@ a span:nth-child(4){
     }
 }
 </style>
-<a href="https://kjmjh.github.io/kj">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        kj23
-    </a>
-    <a href="https://kjmjh.github.io/dbai.html">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        ai对话
-    </a>
-    <a href="https://kjmjh.github.io/dbai2.html">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        ai对话2
-    </a>
-    <a href="https://kjmjh.github.io/dbai3.html">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        ai对话3
-    </a>
-    <a href="https://kjmjh.github.io/dbai4.html">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        ai对话4
-    </a>
-    <a href="https://kjmjh.github.io/aihh.html">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        ai绘画
-    </a>
-    <a href="https://kjmjh.github.io">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        主 页
-    </a>
 </head>
+<body>
+    <div class="button-container">
+        <a href="https://kjmjh.github.io/kj">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            kj23
+        </a>
+        <a href="https://kjmjh.github.io/dbai.html">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            ai对话
+        </a>
+        <a href="https://kjmjh.github.io/dbai2.html">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            ai对话2
+        </a>
+        <a href="https://kjmjh.github.io/dbai3.html">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            ai对话3
+        </a>
+        <a href="https://kjmjh.github.io/dbai4.html">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            ai对话4
+        </a>
+        <a href="https://kjmjh.github.io/aihh.html">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            ai绘画
+        </a>
+        <a href="https://kjmjh.github.io">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            主 页
+        </a>
+    </div>
+</body>
 </html>
