--- a/index.html
+++ b/index.html
@@ -192,6 +192,5 @@ a span:nth-child(4){
         </a>
     </div>
 </body>
-<img src="https://api.yyy001.com/api/Visits?name=kjmjhweb">
-</img>
+<img src="https://count.getloli.com/@:kjmjh" alt=":kjmjh" />
 </html>
