--- a/dbai4.html
+++ b/dbai4.html
@@ -270,7 +270,7 @@
 <body>
     <div class="container">
         <h1>AI 对话</h1>
- <img src="https://api.yyy001.com/api/Visits?name=kjmjhai4" height="90" width="800"></img>
+ <img src="https://count.getloli.com/@:kjmjhai" alt=":kjmjhai" /" height="90" width="800"></img>
         <div>
             <label for="modelSelect">选择 AI 模型:</label>
             <select id="modelSelect">
