--- a/index.html
+++ b/index.html
@@ -192,5 +192,5 @@ a span:nth-child(4){
         </a>
     </div>
 </body>
-<img src="https://count.getloli.com/@:kjmjh" alt=":kjmjh" />
+<img src="https://count.getloli.com/@:kjmjh" alt=":kjmjh" /></img>
 </html>
